--- a/cachefirst/index.html
+++ b/cachefirst/index.html
@@ -14,6 +14,8 @@
   <!-- JavaScript -->
   <script  src="./js/script.js"></script>
   <img width="300" height="300" src="./images/111.jpg" />
+  <img src="./images/hhzdt"/>
+  
   <script>
   // 注册 service worker
   if ('serviceWorker' in navigator) 
