这个是高速缓存

--- a/cachefirst/index.html
+++ b/cachefirst/index.html
@@ -14,7 +14,7 @@
   <!-- JavaScript -->
   <script  src="./js/script.js"></script>
   <img width="300" height="300" src="./images/111.jpg" />
-  <img src="./images/hhzdt"/>
+  <img src="./images/hhzdt.jpg"/>
   
   <script>
   // 注册 service worker
