缓存第3章总结
缓存第3章总结

--- a/progressive-times/article.html
+++ b/progressive-times/article.html
@@ -12,7 +12,7 @@
   <div id="article-header">
     <div id="article-title"></div>
   </div>
-  <!-- article -->
+  <!-- article文章 -->
   <p id="article"></p>
   <hr>
   <!-- scripts -->
