--- a/progressive-times/index.html
+++ b/progressive-times/index.html
@@ -14,7 +14,7 @@
     <h1>Progressive Times</h1>
     <h6>Latest News</h6>
   </div>
-  <!-- latest news -->
+  <!-- latest news最新消息 -->
   <div id="latest"></div>
   <hr>
   <!-- javaScript -->
